# meikikai

./: .gitignore  AGENTS.md  DESIGN.md  README.md  meikikai.macos.spec  meikipop.linux.x64.spec  meikipop.macos.spec  meikipop.win.x64.spec  pyproject.toml
.github/workflows/: build-dictionary.yml  build-macos.yml  pr-build.yml  release.yml
docs/: CUSTOM_OCR_PROVIDER.md
flatpak/: manifest.yml
scripts/: build_install_macos.sh  install_chrome_screen_ai_macos.sh  render_anki_card_sample.py  render_popup_sample.py
src/meikikai/: __init__.py  _version.py  main.py
src/meikikai/anki/: __init__.py  cards.py  connect.py  worker.py
src/meikikai/config/: config.py
src/meikikai/dictionary/: lookup.py
src/meikikai/gui/: input.py  popup.py  screen_ai_setup_dialog.py  settings_dialog.py  tray.py
src/meikikai/gui/popup_design/: __init__.py  styles.py  tokens.py
src/meikikai/ocr/: hit_scan.py  interface.py  ocr.py
src/meikikai/ocr/providers/chrome_screen_ai/: __init__.py  _protobuf.py  _screen_ai.py  component.py  provider.py
src/meikikai/screenshot/: screenmanager.py
src/meikipop/: __init__.py  main.py
src/meikipop/config/: config.py
src/meikipop/dictionary/: lookup.py
src/meikipop/gui/: input.py  popup.py  settings_dialog.py  tray.py
src/meikipop/ocr/: hit_scan.py
src/meikipop/ocr/providers/glensv2/: provider.py
src/meikipop/screenshot/: screenmanager.py
src/meikipop/scripts/: build_dictionary.py
src/meikipop/utils/: paths.py
